--- a/.github/workflows/kubectx.yml
+++ b/.github/workflows/kubectx.yml
@@ -36,8 +36,8 @@ jobs:
 
       - name: Set up GitHub credentials
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Add downloaded binaries to repository
         run: |
