--- a/.github/workflows/kubectx.yml
+++ b/.github/workflows/kubectx.yml
@@ -4,7 +4,10 @@ on:
   schedule:
     - cron: '0 0 * * *' # Runs daily at midnight UTC
   workflow_dispatch: # Allows manual trigger of the workflow
-
+  
+permissions:
+  contents: write # Grant write access to the repository contents
+  
 jobs:
   update-kubectx:
     runs-on: ubuntu-latest
