--- a/.github/workflows/kubectx.yml
+++ b/.github/workflows/kubectx.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout utils repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up GitHub credentials
         run: |
@@ -44,8 +44,8 @@ jobs:
 
       - name: Add downloaded binaries to repository
         run: |
-          mv kubectx-latest/* .
-          rm -rf kubectx-latest
+          rm -r kubectx
+          mv kubectx-latest kubectx
           git add .
 
       - name: Commit changes
