--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,46 +16,47 @@ jobs:
 
       # Step to find and rename the 'kubectl' file (the version embedded file)
       - name: Find and rename kubectl file
+        id: find_kubectl
         run: |
-          # Find the kubectl file (assuming it has version in the name like kubectl_v1.31.2_amd64)
           KUBECTL_FILE=$(find kubectl -name "kubectl_v*_amd64")
           if [ -z "$KUBECTL_FILE" ]; then
             echo "kubectl file not found!"
             exit 1
           fi
-          # Rename it to 'kubectl'
+          echo "KUBECTL_FILE=$KUBECTL_FILE" >> $GITHUB_ENV
           echo "Found kubectl file: $KUBECTL_FILE"
           
-      # Create tar.gz archive that includes kubectx/kubectx, kubectx/kubens, and the renamed kubectl
-      - name: Create tar.gz of selected files
+      # Copy files and list directory to confirm contents
+      - name: Prepare release files
         run: |
           mkdir -p release
-          # Copy exact files
           cp kubectx/kubectx ./release/kubectx
           cp kubectx/kubens ./release/kubens
-          # Copy the renamed kubectl
-          cp $KUBECTL_FILE ./release/kubectl
-          # Create the tarball
+          cp "$KUBECTL_FILE" ./release/kubectl
+          
+      - name: List release directory contents
+        run: ls -l release
+
+      # Create tar.gz of selected files
+      - name: Create tar.gz of selected files
+        run: |
           tar -czvf release/my-release.tar.gz -C release kubectx kubens kubectl
       
-      # Get the "tag_name" for the release (from the pushed tag)
       - name: Get version from tag
         id: extract_tag
         run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
 
-      # Create a GitHub release
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub provides this token automatically
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.extract_tag.outputs.VERSION }}
           release_name: Release ${{ steps.extract_tag.outputs.VERSION }}
           draft: false
           prerelease: false
 
-      # Upload the tarball to the release assets
       - name: Upload tarball to release
         uses: actions/upload-release-asset@v1
         env:
