--- a/.github/workflows/kubectx.yml
+++ b/.github/workflows/kubectx.yml
@@ -10,7 +10,7 @@ permissions:
   
 jobs:
   update-kubectx:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Checkout utils repository
